# onedis

./: .gitignore  Cargo.toml  README.md  build-release.ps1
src/: args.rs  command.rs  command_aof.rs  command_enum.rs  command_names.rs  command_parse.rs  command_tests.rs  frame.rs  lib.rs  lua.rs  main.rs  server.rs  wasm.rs  wasm_guest_memory.rs  wasm_host_imports.rs  wasm_registry.rs  wasm_runtime_types.rs  wasm_tests.rs  wasm_validation_inputs.rs
src/cmds/: full_text.rs  lua.rs  mod.rs  unknown.rs  wasm.rs
src/cmds/bitmap/: bitcount.rs  bitfield.rs  bitop.rs  bitpos.rs  getbit.rs  mod.rs  setbit.rs
src/cmds/connect/: auth.rs  client.rs  echo.rs  mod.rs  ping.rs  select.rs
src/cmds/full_text/: aggregate_profile.rs  create_index_management.rs  dictionary_commands.rs  explain_commands.rs  explain_info_auxiliary.rs  info_tagvals_commands.rs  parsing_helpers.rs  search.rs  spellcheck_commands.rs  suggestion_commands.rs  synonym_commands.rs  tests.rs  unsupported_commands.rs
src/cmds/geo/: commands.rs  geo_codec.rs  mod.rs  search_parser.rs  search_runtime.rs  tests.rs  types.rs
src/cmds/hash/: common.rs  hdel.rs  hexists.rs  hexpire.rs  hget.rs  hgetall.rs  hgetdel.rs  hgetex.rs  hincrby.rs  hincrbyfloat.rs  hkeys.rs  hlen.rs  hmget.rs  hmset.rs  hpersist.rs  hrandfield.rs  hscan.rs  hset.rs  hsetex.rs  hsetnx.rs  hstrlen.rs  httl.rs  hvals.rs  mod.rs
src/cmds/hll/: pfadd.rs  pfcount.rs  pfmerge.rs
src/cmds/json/: commands.rs  mod.rs
src/cmds/key/: copy.rs  del.rs  exists.rs  expire.rs  expireat.rs  expiretime.rs  keys.rs  mod.rs  move.rs  persist.rs  pexpire.rs  pexpireat.rs  pexpiretime.rs  pttl.rs  randomkey.rs  rename.rs  renamenx.rs  scan.rs  touch.rs  ttl.rs  type.rs  unlink.rs
src/cmds/listing/: blmove.rs  blmpop.rs  blpop.rs  brpop.rs  brpoplpush.rs  lindex.rs  linsert.rs  llen.rs  lmove.rs  lmpop.rs  lpop.rs  lpos.rs  lpush.rs  lpushx.rs  lrange.rs  lrem.rs  lset.rs  ltrim.rs  mod.rs  rpop.rs  rpoplpush.rs  rpush.rs  rpushx.rs  tests.rs
src/cmds/lua/: apply.rs  command_types.rs  parsing.rs  script_parsing.rs
src/cmds/server/: bgsave.rs  config.rs  dbsize.rs  flushall.rs  flushdb.rs  info.rs  mod.rs  save.rs
src/cmds/set/: mod.rs  sadd.rs  scard.rs  sdiff.rs  sdiffstore.rs  sinter.rs  sintercard.rs  sinterstore.rs  sismember.rs  smembers.rs  smismember.rs  smove.rs  spop.rs  srandmember.rs  srem.rs  sscan.rs  sunion.rs  sunionstore.rs  tests.rs
src/cmds/sorted_set/: bzmpop.rs  bzpopmax.rs  bzpopmin.rs  common.rs  mod.rs  tests.rs  zadd.rs  zcard.rs  zcount.rs  zdiff.rs  (+28 more)
src/command/: aof.rs  dispatch.rs  kind.rs  mod.rs  names.rs  parse.rs  tests.rs
src/command_dispatch/: autocommit.rs
src/frame/: accessors.rs  mod.rs  parsing.rs  parsing_array_values.rs  parsing_bulk_values.rs  parsing_entrypoints.rs  parsing_frame_bounds.rs  parsing_inline.rs  parsing_simple_values.rs  serialization.rs
src/lua/: mod.rs  redis_api.rs  registry.rs  runtime.rs  value_bridge.rs
src/network/: connection.rs  mod.rs  session.rs  session_acl.rs  session_glob.rs  session_manager.rs  session_manager_types.rs  session_monitor.rs  session_pubsub.rs  session_registry.rs
src/observability/: metrics.rs  prometheus.rs
src/server/: borrowed_fast_paths.rs  borrowed_read_fast_paths.rs  borrowed_resp.rs  borrowed_write_fast_paths.rs  command_executor.rs  handler_blocking_list.rs  handler_blocking_stream.rs  handler_blocking_zset.rs  handler_command_classification.rs  handler_command_dispatch.rs  handler_commands.rs  handler_connection.rs  handler_fast_paths.rs  handler_pubsub_acl.rs  resp_helpers.rs  tests.rs  transaction_command_apply.rs  transaction_execution.rs  transaction_queue_policy.rs  transaction_run.rs  transaction_state_watch.rs
src/store/: db.rs  db_manager.rs  full_text.rs  full_text_directory.rs  kv_store.rs  kv_store_batch_writes.rs  kv_store_iterator_helpers.rs  kv_store_lifecycle.rs  kv_store_merge_operator.rs  kv_store_raw_reads.rs  kv_store_raw_writes.rs  kv_store_scans.rs  kv_store_tests.rs  mod.rs  ttl.rs  vector.rs
src/tools/: pattern.rs
src/wasm/: guest_memory.rs  host_imports.rs  mod.rs  registry.rs  runtime_types.rs  tests.rs  validation_inputs.rs
tests/: README.md  architecture_boundaries.rs
tests/command_semantics/: command_dispatch_command_semantics.rs  command_semantics_high_coverage.rs  db_error_command_semantics.rs  frame_command_semantics.rs  full_text_aggregate_command_semantics.rs  full_text_cluster_contract_command_semantics.rs  full_text_compat_matrix_command_semantics.rs  full_text_dictionary_suggestion_synonym_command_semantics.rs  full_text_geo_search_command_semantics.rs  full_text_index_management_command_semantics.rs  full_text_introspection_command_semantics.rs  full_text_json_indexing_command_semantics.rs  full_text_lifecycle_command_semantics.rs  full_text_mutation_indexing_command_semantics.rs  full_text_query_parser_command_semantics.rs  full_text_refresh_outbox_command_semantics.rs  full_text_schema_create_command_semantics.rs  full_text_search_results_command_semantics.rs  full_text_text_analysis_command_semantics.rs  full_text_vector_search_command_semantics.rs  kv_engine_collection_command_semantics.rs  kv_engine_string_key_command_semantics.rs  lua_command_semantics.rs  server_components_command_semantics.rs  support.rs  vector_command_semantics.rs
tests/tcp_e2e/: basic_commands_tcp_e2e.rs  connect_commands_tcp_e2e.rs  hash_commands_tcp_e2e.rs  info_command_tcp_e2e.rs  keys_performance_tcp_e2e.rs  move_command_tcp_e2e.rs  scan_command_tcp_e2e.rs  sdiff_command_tcp_e2e.rs  sscan_command_tcp_e2e.rs  support.rs  transactions_tcp_e2e.rs
(+290 files in other folders)
